features: added RateLimitFilter

--- a/chatroon-backend/pom.xml
+++ b/chatroon-backend/pom.xml
@@ -71,6 +71,13 @@
 			<artifactId>awaitility</artifactId>
 			<version>4.2.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.vladimir-bukhtoyarov</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>7.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
